[package]
name = "brau-exporter"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 2

[dependencies]
async-std = "1.12.0"
env_logger = "0.10.0"
error = "0.1.9"
futures = "0.3.25"
html_parser = "0.6.3"
paho-mqtt = "0.11"
prometheus = "0.13.3"
reqwest = { version = "0.11.13", features = ["blocking", "cookies", "gzip"] }
select = "0.6.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tungstenite = "0.18.0"
